--- a/problemas.html
+++ b/problemas.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Problemática en el transporte público</title>
 <!-- Public Sans Font -->
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;700;900&display=swap" rel="stylesheet"/>
     <!-- Material Symbols -->
@@ -124,4 +124,5 @@
         </div>
     </footer>
 </body>
+
 </html>
