--- a/resultados.html
+++ b/resultados.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registros</title>
       <!-- Public Sans Font -->
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;700;900&display=swap" rel="stylesheet"/>
     <!-- Material Symbols -->
@@ -168,5 +168,6 @@ function updateVolunteerCount() {
 // Ejecutar al cargar la página
 updateVolunteerCount();
 </script>
+
 
 </html>
